--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -59,7 +59,8 @@
         <h1>Privacy Policy</h1>
         <p><strong>Last Updated: January 29, 2026</strong></p>
 
-        <p>At Easy Sheets, accessible from https://easysheets.netlify.app/, one of our main priorities is the privacy of
+        <p>At Easy Sheets, accessible from https://easysheetsps.netlify.app/, one of our main priorities is the privacy
+            of
             our visitors. This Privacy Policy document contains types of information that is collected and recorded by
             Easy Sheets and how we use it.</p>
 
